--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "vue-line-clamp": "^1.3.2",
     "vue-router": "^3.5.1",
     "vuex": "^3.5.1",
-    "vuex-persistedstate": "^4.0.0-beta.3"
+    "vue-meta": "^2.4.0",
+    "vuex-persistedstate": "^4.0.0-beta.3",
+    "vue-socket.io": "^3.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
